--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"autoprefixer": "^10.4.7",
+		"dotenv": "^16.0.1",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -41,6 +42,7 @@
 	"packageManager": "yarn@3.2.1",
 	"dependencies": {
 		"@steeze-ui/heroicons": "^1.1.1",
-		"@steeze-ui/svelte-icon": "^1.3.1"
+		"@steeze-ui/svelte-icon": "^1.3.1",
+		"@supabase/supabase-js": "^1.35.4"
 	}
 }
